if (WIN32)
    find_package(OpenSSL)

    add_library(ClientHttpSession  STATIC source/client_http_session.cc)
    target_include_directories(ClientHttpSession INTERFACE include)
    target_include_directories(ClientHttpSession PRIVATE AFTER private_include)
    target_link_libraries(ClientHttpSession PRIVATE boost_beast OpenSSL::OpenSSL)

    add_library(ClientWebsocketSession  STATIC source/client_websocket_session.cc)
    target_include_directories(ClientWebsocketSession INTERFACE include)
    target_include_directories(ClientWebsocketSession PRIVATE AFTER private_include)
    target_link_libraries(ClientWebsocketSession PRIVATE boost_beast OpenSSL::OpenSSL)

    add_library(activity_manager_connector STATIC source/activity_manager_connector.cc)
    target_include_directories(activity_manager_connector INTERFACE include)
    target_include_directories(activity_manager_connector PRIVATE AFTER private_include include)
    target_link_libraries(activity_manager_connector boost_beast  OpenSSL::OpenSSL ClientWebsocketSession ClientHttpSession)

    add_library(activity_manager_connector_factory STATIC source/activity_manager_connector_factory.cc)
    target_include_directories(activity_manager_connector_factory INTERFACE include)
    target_include_directories(activity_manager_connector_factory PRIVATE AFTER private_include)
    target_link_libraries(activity_manager_connector_factory PRIVATE activity_manager_connector)
elseif(UNIX)
    find_package(OpenSSL)

    add_library(ClientHttpSession  STATIC source/client_http_session.cc)
    target_include_directories(ClientHttpSession INTERFACE include)
    target_include_directories(ClientHttpSession PRIVATE AFTER private_include)
    target_link_libraries(ClientHttpSession PRIVATE boost_beast OpenSSL::OpenSSL)

    add_library(ClientWebsocketSession  STATIC source/client_websocket_session.cc)
    target_include_directories(ClientWebsocketSession INTERFACE include)
    target_include_directories(ClientWebsocketSession PRIVATE AFTER private_include)
    target_link_libraries(ClientWebsocketSession PRIVATE boost_beast OpenSSL::OpenSSL)

    add_library(activity_manager_connector STATIC source/activity_manager_connector.cc)
    target_include_directories(activity_manager_connector INTERFACE include)
    target_include_directories(activity_manager_connector PRIVATE AFTER private_include include)
    target_link_libraries(activity_manager_connector boost_beast  OpenSSL::OpenSSL ClientWebsocketSession ClientHttpSession)

    add_library(activity_manager_connector_factory STATIC source/activity_manager_connector_factory.cc)
    target_include_directories(activity_manager_connector_factory INTERFACE include)
    target_include_directories(activity_manager_connector_factory PRIVATE AFTER private_include)
    target_link_libraries(activity_manager_connector_factory PRIVATE activity_manager_connector)
endif ()
